ASM-1862 Add tests for exception handling in ChipsFormDataMapper and DocumentRenderClient